--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -78,4 +78,15 @@
   *:after {
     box-sizing: inherit;
   }
+
+  input {
+    box-shadow: none !important;
+  }
+
+  button,
+  html [type="button"], /* 1 */
+  [type="reset"],
+  [type="submit"] {
+    -webkit-appearance: none; /* 2 */
+  }
 }
